--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
-body {}
+body {font-size: 14px}
 p {margin-bottom: 0px;}
+button {outline: none;}
 header {
     background: url(image/BG-head.png) no-repeat;
     padding-top: 50px;
@@ -17,26 +18,30 @@ a:hover {
 }
 header a {color: white;}
 #shapka h1 {transition: all 0.4s ease;}
+.shapka-text {padding-top: 30px;}
 .phone {float: right;}
-#shfoo {
-    padding-bottom: 170px;
-}
+#shfoo {padding-bottom: 200px;}
+.shfoo-text {margin-top: 110px;}
 .form {
     background: #FFFFFF;
     box-shadow: 0 2px 20px 0 rgba(30,40,51,0.30);
     color: #000;
     border-radius: 5px;
-    padding: 35px 25px 0 25px;
+    padding: 35px 25px;
     width: 100%;
     float: right;
 }
-.form input {
+.form input[type=text] {
     height: 40px;
     width: 100%;
     padding-left: 5px;
-    margin: 5px 0;
+    margin: 0 0 20px 0;
 }
-.form h2 {color: #F99229;}
+.form h2 {
+    color: #F99229;
+    margin-bottom: 25px;
+}
+.form button {outline: none;}
 .button {
     background: #F99229;
     box-shadow: 0 2px 14px 0 rgba(191,43,101,0.40);
@@ -45,11 +50,22 @@ header a {color: white;}
     color: #FFFFFF;
     letter-spacing: 0.01px;
     border-radius: 5px;
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    outline: none;
 }
 .table {text-align: center;}
 .table img {
     padding-bottom: 30px;
     padding-top: 20px;
+}
+label {
+    display: unset;
+    font-size: 11px;
+    width: 280px;
+    float: right;
+    padding-top: 4px;
 }
 .space {
     height: 80px;
@@ -59,15 +75,150 @@ header a {color: white;}
     font-size: 50px;
     font-weight: 100;
 }
-
-
-
-.nazvanie {
-    margin-right: auto;
+#pict img {margin: 50px 0 40px 110px;}
+#pict-text p {margin-top: 20px;}
+#pict-text .col-md-4 {margin-bottom: 20px;}
+#why {
+    
+    margin-bottom: 90px;
 }
-#pict img {
-    margin: 50px 0 40px 110px;
+#cta {margin-bottom: 90px;}
+.plate {
+    background: url(image/Plate.svg);
+    padding: 150px 0 60px 0;
 }
-#pict-text p {
-    margin-top: 20px;
+.plate p {color: #ffffff;}
+.plate button {
+    outline: none;
+    background-color: #ffffff;
+    color: #000000;
 }
+#how {margin-bottom: 150px;}
+.line {
+    width: 100%;
+    height: 1px;
+    background-color: darkgrey;
+    margin: 30px 0;
+}
+#how .first {
+    background: url(image/1.svg) no-repeat;
+    height: 120px;
+    font-size: 18px;
+    font-weight: 500;
+}
+#how .second {
+    background: url(image/2.svg) no-repeat;
+    font-size: 18px;
+    font-weight: 500;
+}
+#how .third {
+    background: url(image/3.svg) no-repeat;
+    font-size: 18px;
+    font-weight: 500;
+}
+#cases {
+    background: url(image/Plate_bg.svg) no-repeat;
+    padding-top: 150px;
+    position: relative;
+    margin-bottom: 200px;
+}
+#cases h2 {
+    color: #ffffff;
+    margin-bottom: 50px;
+}
+#cases a {color: #ffffff;}
+#cases .active {border-bottom: 1px solid #ffffff;}
+#cases .owl-carousel {
+    margin-top: 50px;
+    position: relative;
+}
+#cases .owl-prev {
+    width: 40px;
+    height: 40px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    position: absolute;
+    top: 295px;
+    left: 20px;
+    outline: none;
+}
+#cases .owl-next {
+    width: 40px;
+    height: 40px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    position: absolute;
+    top: 295px;
+    right: 20px;
+    outline: none;
+}
+#cases .owl-next:hover, #cases .owl-prev:hover {box-shadow: 0 0 15px;}
+#cases .white {
+    position: absolute;
+    top: 415px;
+    left: 130px;
+}
+#company {margin-bottom: 200px;}
+#company h2 {margin-bottom: 60px;}
+#product {
+    margin-bottom: 200px;
+    text-align: center;
+    position: relative;
+}
+#product h2 {
+    margin-bottom: 60px;
+    text-align: left;
+}
+#product .product-label {
+    position: relative;
+    background: #ffffff;
+    border: 1px solid black;
+    padding: 30px 15px;
+    height: 100%;
+    transition: 0.3s;
+}
+#product .product-label:hover {box-shadow: 0 0 50px;}
+#product h5 {
+    padding-bottom: 15px;
+    border-bottom: 1px solid black;
+    margin: 0 auto 15px auto;
+    width: 190px;
+}
+#product .line {margin: 15px 0;}
+#product .button {margin-top: 50px;}
+#product .ten {
+    position: absolute;
+    left: 110px;
+    top: 215px;
+}
+#product .eleven {
+    position: absolute;
+    bottom: 100px;
+    left: 0;
+}
+#product .twelv {
+    position: absolute;
+    top: -15px;
+    right: 0;
+}
+#performance {margin-bottom: 150px;}
+#performance h2 {margin: 125px 0 40px 0;}
+#performance p {margin-bottom: 20px;}
+#video {
+    margin-bottom: 150px;
+    position: relative;
+}
+#video h2 {
+    color: #ffffff;
+    position: absolute;
+    top: 370px;
+    left: 145px;
+}
+#form {margin-bottom: 150px;}
+#form .form {
+    width: 350px;
+    margin: auto;
+    float: none;
+    height: 450px;
+}
+#form h5 {text-align: center;}
