--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,14 @@
-body {font-size: 14px}
+body {
+    font-size: 14px;
+    position: relative;
+}
 p {margin-bottom: 0px;}
 button {outline: none;}
 header {
     background: url(image/BG-head.png) no-repeat;
     padding-top: 50px;
     color: white !important;
+    height: 1040px;
 }
 input {outline:none;}
 a {
@@ -16,14 +20,48 @@ a:hover {
     text-decoration: none;
     color: #F99229;
 }
+#bg_1 {
+    background: url(image/BG_elements1.svg);
+    position: absolute;
+    width: 100%;
+    height: 1534px;
+    top: 540px;
+}
+#bg_2 {
+    background: url(image/BG_elements2.svg);
+    position: absolute;
+    width: 100%;
+    height: 2000px;
+    top: 2900px;
+}
+#bg_3 {
+    background: url(image/BG_elements3.svg);
+    position: absolute;
+    width: 100%;
+    height: 1556px;
+    top: 7200px;
+    z-index: 1000;
+}
+.sticky {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 5000;
+    background-image: linear-gradient(to left, #301E72, #3567BE);
+    padding: 25px 0;
+}
 header a {color: white;}
 #shapka h1 {transition: all 0.4s ease;}
 .shapka-text {padding-top: 30px;}
 .phone {float: right;}
-#shfoo {padding-bottom: 200px;}
+#shfoo {
+    padding-bottom: 200px;
+    position: relative;
+    z-index: 2000;
+}
 .shfoo-text {margin-top: 110px;}
 .form {
-    background: #FFFFFF;
+    background-color: #FFFFFF;
     box-shadow: 0 2px 20px 0 rgba(30,40,51,0.30);
     color: #000;
     border-radius: 5px;
@@ -94,6 +132,7 @@ label {
     color: #000000;
 }
 #how {margin-bottom: 150px;}
+#how h2 {margin-bottom: 50px;}
 .line {
     width: 100%;
     height: 1px;
@@ -115,18 +154,22 @@ label {
     background: url(image/3.svg) no-repeat;
     font-size: 18px;
     font-weight: 500;
+    padding-bottom: 35px;
 }
 #cases {
     background: url(image/Plate_bg.svg) no-repeat;
     padding-top: 150px;
     position: relative;
     margin-bottom: 200px;
+    padding-bottom: 30px;
+    z-index: 2000;
 }
 #cases h2 {
     color: #ffffff;
     margin-bottom: 50px;
 }
 #cases a {color: #ffffff;}
+#cases a:hover {color: #F99229;}
 #cases .active {border-bottom: 1px solid #ffffff;}
 #cases .owl-carousel {
     margin-top: 50px;
@@ -185,7 +228,10 @@ label {
     width: 190px;
 }
 #product .line {margin: 15px 0;}
-#product .button {margin-top: 50px;}
+#product .button {
+    margin-top: 50px;
+    margin-bottom: 0;
+}
 #product .ten {
     position: absolute;
     left: 110px;
@@ -214,7 +260,11 @@ label {
     top: 370px;
     left: 145px;
 }
-#form {margin-bottom: 150px;}
+#form {
+    margin-bottom: 200px;
+    z-index: 2000;
+    position: relative;
+}
 #form .form {
     width: 350px;
     margin: auto;
@@ -222,3 +272,22 @@ label {
     height: 450px;
 }
 #form h5 {text-align: center;}
+#mapping {
+    position: relative;
+    z-index: 2000;
+}
+#map {
+    width: 100%;
+    height: 790px;
+}
+footer {
+    background-image: linear-gradient(to left, #301E72, #3567BE);
+    padding: 50px 0;
+    color: #ffffff;
+}
+footer a {
+    color: #ffffff;
+    padding: 0 10px;
+}
+footer .col-md-6 {margin-bottom: 30px;}
+footer .text-footer {font-size: 12px;}
