--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,8 @@ label {
     color: #000000;
 }
 #how {margin-bottom: 150px;}
+#how .col-md-5 {position: relative;}
+#how .col-md-7 {height: 105px;}
 #how h2 {margin-bottom: 50px;}
 .line {
     width: 100%;
@@ -139,22 +141,16 @@ label {
     background-color: darkgrey;
     margin: 30px 0;
 }
-#how .first {
-    background: url(image/1.svg) no-repeat;
-    height: 120px;
-    font-size: 18px;
-    font-weight: 500;
+#how span {
+    position: absolute;
+    font-size: 145px;
+    top: -58px;
+    color: #ffffff;
+    text-shadow: 0 0 20px rgb(120, 43, 191, 0.2);
 }
-#how .second {
-    background: url(image/2.svg) no-repeat;
-    font-size: 18px;
-    font-weight: 500;
-}
-#how .third {
-    background: url(image/3.svg) no-repeat;
-    font-size: 18px;
-    font-weight: 500;
-    padding-bottom: 35px;
+#how p {
+    z-index: 1000;
+    position: relative;
 }
 #cases {
     background: url(image/Plate_bg.svg) no-repeat;
@@ -170,7 +166,6 @@ label {
 }
 #cases a {color: #ffffff;}
 #cases a:hover {color: #F99229;}
-#cases .active {border-bottom: 1px solid #ffffff;}
 #cases .owl-carousel {
     margin-top: 50px;
     position: relative;
@@ -217,7 +212,8 @@ label {
     background: #ffffff;
     border: 1px solid black;
     padding: 30px 15px;
-    height: 100%;
+    height: 755px;
+    position: relative;
     transition: 0.3s;
 }
 #product .product-label:hover {box-shadow: 0 0 50px;}
@@ -229,8 +225,10 @@ label {
 }
 #product .line {margin: 15px 0;}
 #product .button {
-    margin-top: 50px;
-    margin-bottom: 0;
+    width: 223px;
+    position: absolute;
+    bottom: 20px;
+    left: 15px;
 }
 #product .ten {
     position: absolute;
